# rp2040-freertos-greenhouse

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/co2_sensor/: co2.cpp  co2.h
src/co2_valve/: co2_valve.cpp  co2_valve.h
src/fan/: fan.cpp  fan.h
src/i2c/: PicoI2C.cpp  PicoI2C.h
src/ipstack/: lwipopts.h  picow_tls_client.c
src/modbus/: ModbusRegister.cpp  ModbusRegister.h
src/rh_t_sensor/: rh_t_sensor.cpp  rh_t_sensor.h
src/tasks/: controllersTask.cpp  controllersTask.h  oledTask.cpp  oledTask.h  sensorsTask.cpp  sensorsTask.h
src/uart/: PicoOsUart.cpp
